force-app/main/default/objects/Payment_Result__c/Payment_Result__c.object-meta.xml
<CustomObject>
    <description>Created by: Dylan Bowman (RC)
Business Unit: All (Payment Processing)
Purpose: To track payments via Stripe.</description>
    <label>Payment Result</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Payment Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>