force-app/main/default/objects/Payment_Result__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <description>Created By: MV 
Business Unit: Hashtag Stripe Payments
Purpose: hyperlink to payment
Populated: Automatic</description>
    <formula>HYPERLINK(&quot;https://dashboard.stripe.com/charges/&quot;&amp;   Charge_ID__c  , 

 Charge_ID__c   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge</label>
    <type>Text</type>
</CustomField>