force-app/main/default/objects/Payment_Result__c/fields/Charge_ID__c.field-meta.xml
<CustomField>
    <fullName>Charge_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Charge ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>