force-app/main/default/objects/Payment_Result__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Results</relationshipLabel>
    <relationshipName>Payment_Results</relationshipName>
    <type>Lookup</type>
</CustomField>