force-app/main/default/objects/Payment_Result__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>Created By: MV 
Business Unit: Hashtag Stripe Payments
Purpose: hyperlink to payment
Populated: Automatic</description>
    <formula>HYPERLINK(&quot;https://dashboard.stripe.com/customers/&quot;&amp;   Customer_ID__c   , 

 Customer_ID__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>