force-app/main/default/objects/Payment_Result__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <description>The ID of the Stripe Customer.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>