force-app/main/default/objects/Payment_Result__c/fields/Gateway__c.field-meta.xml
<CustomField>
    <fullName>Gateway__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Gateway</label>
    <referenceTo>Gateway__c</referenceTo>
    <relationshipLabel>Payment Results</relationshipLabel>
    <relationshipName>Payment_Results</relationshipName>
    <type>Lookup</type>
</CustomField>