force-app/main/default/objects/Payment_Result__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <description>Created By: MV 
Business Unit: Hashtag Stripe Payments
Purpose: hyperlink to payment
Populated: Automatic</description>
    <formula>HYPERLINK(&quot;https://dashboard.stripe.com/invoices/&quot;&amp;   Invoice_ID__c  , 

 Invoice_ID__c   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice</label>
    <type>Text</type>
</CustomField>