force-app/main/default/objects/Payment_Result__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Payment Results</relationshipLabel>
    <relationshipName>Payment_Results</relationshipName>
    <type>Lookup</type>
</CustomField>