force-app/main/default/objects/Payment_Result__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Created By: RS
Business Purpose: WFT</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>