force-app/main/default/objects/Payment_Result__c/fields/Partially_Plan__c.field-meta.xml
<CustomField>
    <fullName>Partially_Plan__c</fullName>
    <description>Created By: CC
Department: WFT
Purpose: Link to Partially plan</description>
    <formula>HYPERLINK(&quot;https://demo.partial.ly/merchant/plan/&quot; + Partially_Plan_Id__c, Partially_Plan_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partially Plan</label>
    <type>Text</type>
</CustomField>