force-app/main/default/objects/Payment_Result__c/fields/Partially_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Partially_Plan_Id__c</fullName>
    <description>Created By: CC
Department: WFT
Purpose: Contains Partially Plan Id.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Partially Plan Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>