force-app/main/default/objects/Payment_Result__c/fields/Receipt_URL__c.field-meta.xml
<CustomField>
    <fullName>Receipt_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Receipt URL</label>
    <type>Url</type>
</CustomField>