force-app/main/default/objects/Payment_Result__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: CC
Department: WFT
Purpose: Connect Registration to Payments</description>
    <label>Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Payment Results</relationshipLabel>
    <relationshipName>Payment_Results</relationshipName>
    <type>Lookup</type>
</CustomField>