force-app/main/default/objects/Payment_Result__c/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: CC
Purpose: To mark a failed payment as resolved.</description>
    <inlineHelpText>A resolved failed payment is removed from failed payment list views and reports.</inlineHelpText>
    <label>Resolved?</label>
    <type>Checkbox</type>
</CustomField>