force-app/main/default/objects/Payment_Result__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <description>Created By: MV 
Business Unit: Hashtag Stripe Payments
Purpose: hyperlink to payment
Populated: Automatic</description>
    <formula>HYPERLINK(&quot;https://dashboard.stripe.com/subscriptions/&quot;&amp;   Subscription_ID__c   , 

 Subscription_ID__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription</label>
    <type>Text</type>
</CustomField>