force-app/main/default/objects/Payment_Result__c/fields/Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscription_ID__c</fullName>
    <description>The ID of the Subscription in Stripe.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Subscription ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>