force-app/main/default/objects/Payment_Result__c/listViews/Cowork_Failed_Payment_Results.listView-meta.xml
<ListView>
    <fullName>Cowork_Failed_Payment_Results</fullName>
    <booleanFilter>1 AND 4 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Charge__c</columns>
    <columns>Contact__c</columns>
    <columns>Source__c</columns>
    <columns>Status__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>failed</value>
    </filters>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Membership Sign-Up</value>
    </filters>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Stripe Charge/Invoice</value>
    </filters>
    <filters>
        <field>Gateway__c</field>
        <operation>equals</operation>
        <value>Cowork</value>
    </filters>
    <label>Cowork Failed Payment Results</label>
    <sharedTo>
        <group>Cowork_Team</group>
    </sharedTo>
</ListView>