force-app/main/default/objects/Payment_Result__c/listViews/Cowork_Payments.listView-meta.xml
<ListView>
    <fullName>Cowork_Payments</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Source__c</columns>
    <columns>Receipt_URL__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>notEqual</operation>
        <value>Geekwise Sign-up</value>
    </filters>
    <label>Cowork Payments</label>
    <sharedTo>
        <group>Cowork_Team</group>
    </sharedTo>
</ListView>